<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.falabellatest.viewModel.economicIndicators.EconomicIndicatorsViewModel" />
    </data>
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/mainColor"
            android:weightSum="100">
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="80"
                android:id="@+id/titleTextView"
                android:text="@string/activity_economic_indicators_title"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_height="match_parent" />
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6">
                <ImageView
                    android:contentDescription="@string/image"
                    android:layout_height="30dp"
                    android:layout_width="match_parent"
                    android:layout_centerInParent="true"
                    android:src="@drawable/icon_general_logout"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/logoutButton"
                    android:background="@android:color/transparent"/>
            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/listView"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:layout_marginTop="0dp"
                android:background="@color/white"
                android:layout_gravity="center"
                app:setAdapter="@{viewModel.adapter}"
                tools:listitem="@layout/cell_economic_indicator"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/activity_economic_indicators_reload_data"
                android:background="@color/white"
                android:id="@+id/reloadButton"
                android:visibility="gone"/>
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/activity_economic_indicators_no_data"
                android:id="@+id/noDataTextView"
                android:layout_centerInParent="true"
                android:visibility="gone"/>
        </RelativeLayout>
    </LinearLayout>
</layout>